# My_Catkin_Workspace

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/tan/: tanmsg.h
devel/include/tanpack/: Battery.h  BatteryRequest.h  BatteryResponse.h  Camera.h  CameraRequest.h  CameraResponse.h  Position.h  PositionCommand.h  PositionCommandRequest.h  PositionCommandResponse.h  PositionRequest.h  PositionResponse.h  tanmsg.h
devel/lib/beginner_tutorials/: listener  talker
devel/lib/meturone/: node1
devel/lib/pkgconfig/: beginner_tutorials.pc  meturone.pc  modeluydu.pc  tan.pc  tanpack.pc
devel/lib/tanpack/: ROSAPIcontrol  mission1  mission2  movecircle  movestar  tanpub
src/beginner_tutorials/: CMakeLists.txt
src/beginner_tutorials/scripts/: talker.py
src/beginner_tutorials/src/: talker.cpp
src/ceng460hw1/: CMakeLists.txt  package.xml  riders_CMakeLists.txt  riders_package.xml
src/ceng460hw1/data/: clues.npy
src/ceng460hw1/launch/: treasure_hunt.launch  treasure_hunt_easy_mode.launch  treasure_hunt_riders.launch  treasure_hunt_riders_easy_mode.launch
src/ceng460hw1/src/: ceng460hw1_utils.py  referee.py  solution.py
src/ceng460hw1/srv/: SpotAnnouncement.srv
src/ceng460hw1/urdf/: arrow3.sdf  turtlebot3_waffle_pi_barebones.gazebo.xacro  turtlebot3_waffle_pi_barebones.urdf.xacro  turtlebot3_waffle_pi_barebones_riders.urdf.xacro
src/ceng460hw1/worlds/: cengbot.world
src/mavros_auto_mission/missions/: missionwp_file.txt  missionwp_file_AlaFija.txt  missionwp_file_Drone_1.txt  missionwp_file_Drone_2.txt  missionwp_file_Drone_3.txt
src/tanpack/: CMakeLists.txt
(+61 files in other folders)
